🐛 Fix to short background height

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,6 +48,7 @@ html {
   background-image: url("/background.webp");
   background-position: right top;
   background-repeat: no-repeat;
+  min-height: 100vh;
 }
 
 .overlay {
